# haskell-web-stack

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yml  config.yaml  route  web-hs.cabal
app/: API.hs  Client.hs  Database.hs  Demo.hs  Domain.hs  Main.hs  Server.hs  Util.hs
app/Domain/: APIError.hs  Widget.hs  Wip.hs
test/: Docker.hs  ServerSpec.hs
