cabal-version:      3.16

name:               web-hs
version:            0.1.0.0
synopsis:  A classic web server and database.
-- description:
license:            NONE
author:             Jason Feingold
maintainer:         jfeingold@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable web-hs
    import:           warnings
    ghc-options:      -threaded -with-rtsopts=-N
    main-is:          Main.hs
    other-modules:    Util, Domain, Database, API
    -- other-extensions:
    build-depends:    base,
                      scotty,
                      postgresql-simple,
                      resource-pool,
                      bytestring,
                      text,
                      uuid,
                      time,
                      aeson,
                      http-types,
                      mtl
    hs-source-dirs:   app
    default-language: GHC2021
