cabal-version:      3.16

name:               web-hs
version:            0.1.0.0
synopsis:  A classic web server and database.
-- description:
license:            NONE
author:             Jason Feingold
maintainer:         jfeingold@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable server
    import:           warnings
    ghc-options:      -threaded -with-rtsopts=-N
    main-is:          Server.hs
    other-modules:    Util,
                      Domain.Wip, Domain.Widget, Domain.APIError,
                      Database, API
    -- other-extensions:
    build-depends:    base,
                      scotty,
                      postgresql-simple,
                      resource-pool,
                      bytestring,
                      text,
                      uuid,
                      time,
                      aeson,
                      http-types,
                      mtl,
                      transformers,
                      unliftio-core
    hs-source-dirs:   app
    default-language: GHC2021

executable demo
    import:           warnings
    ghc-options:      -threaded -with-rtsopts=-N
    main-is:          Demo.hs
    other-modules:    Util,
                      Domain.Wip, Domain.Widget, Domain.APIError,
                      Database, API
    -- other-extensions:
    build-depends:    base,
                      postgresql-simple,
                      resource-pool,
                      bytestring,
                      text,
                      uuid,
                      time,
                      aeson,
                      http-types,
                      mtl,
                      transformers,
                      unliftio-core
    hs-source-dirs:   app
    default-language: GHC2021
