cabal-version:      3.16

name:               web-hs
version:            0.1.0.0
synopsis:  A classic web server and database.
-- description:
license:            NONE
author:             Jason Feingold
maintainer:         jfeingold@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable server
    import:           warnings
    ghc-options:      -threaded -with-rtsopts=-N
    main-is:          Main.hs
    other-modules:    Server, Util,
                      Domain.Wip, Domain.Widget, Domain.APIError,
                      Database, API
    -- other-extensions:
    build-depends:    base,
                      scotty,
                      warp,
                      postgresql-simple,
                      resource-pool,
                      bytestring,
                      text,
                      uuid,
                      time,
                      aeson,
                      http-types,
                      mtl,
                      transformers,
                      unliftio-core
    hs-source-dirs:   app
    default-language: GHC2021

test-suite server-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          Spec.hs
    other-modules:    ServerSpec,
                      Docker,
                      Util,
                      Domain.Wip, Domain.Widget, Domain.APIError,
                      Database, API, Server
    build-tool-depends: hspec-discover:hspec-discover
    build-depends:    base,
                      scotty,
                      warp,
                      wai,
                      wai-extra,
                      hspec,
                      hspec-wai,
                      hspec-wai-json,
                      postgresql-simple,
                      resource-pool,
                      bytestring,
                      text,
                      uuid,
                      time,
                      aeson,
                      http-types,
                      mtl,
                      transformers,
                      unliftio-core,
                      process
    default-language: GHC2021

executable demo
    import:           warnings
    ghc-options:      -threaded -with-rtsopts=-N
    main-is:          Demo.hs
    other-modules:    Util,
                      Domain.Wip, Domain.Widget, Domain.APIError,
                      Database, API
    -- other-extensions:
    build-depends:    base,
                      postgresql-simple,
                      resource-pool,
                      bytestring,
                      text,
                      uuid,
                      time,
                      aeson,
                      http-types,
                      mtl,
                      transformers,
                      unliftio-core
    hs-source-dirs:   app
    default-language: GHC2021

executable client
    import:           warnings
    ghc-options:      -threaded -with-rtsopts=-N
    main-is:          Client.hs
    other-modules:    Util,
                      Domain.Wip, Domain.Widget, Domain.APIError
    build-depends:    base,
                      bytestring,
                      text,
                      uuid,
                      time,
                      aeson,
                      http-conduit,
                      http-types,
                      mtl,
                      transformers,
                      postgresql-simple
    hs-source-dirs:   app
    default-language: GHC2021
